<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="profile_title">Profile</string>
    <string name="profile_btn_sign_out">Sign out</string>
    <string name="profile_btn_edit_profile">Edit</string>
    <string name="profile_btn_display_favs">Display favorite listings</string>
    <string name="profile_btn_display_blocked">Display blocked users</string>
    <string name="profile_btn_display_own_listings">Display your listings</string>
    <string name="profile_edit_title">Edit profile information</string>
    <string name="profile_favorites_title">Favorite Listings</string>
    <string name="profile_blocked_title">Blocked Users</string>
    <string name="profile_favorites_no_favs">No favorite items yet</string>
    <string name="profile_blocked_no_blocked">No blocked users yet</string>
    <string name="profile_own_listings_title">Your Listings</string>
    <string name="profile_own_listings_drafts_title">Drafts</string>
    <string name="profile_own_listings_published_title">Published</string>
    <string name="profile_own_listings_no_listings">You have not created any listings yet.</string>
    <string name="profile_own_listings_no_drafts">You currently have no saved drafts.</string>
    <string name="profile_edit_form_label_firstname">First Name</string>
    <string name="profile_edit_form_label_lastname">Last Name</string>
    <string name="profile_edit_form_label_username">User Name</string>
    <string name="profile_edit_form_label_phone">Phone Number</string>
    <string name="profile_edit_form_btn_save">Save information</string>
    <string name="profile_edit_form_error_invalid_phone">Please enter a valid Swiss phone number</string>
</resources>
