<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="listings_add_title">Create your Listing</string>
    <string name="listings_add_form_title">Name</string>
    <string name="listings_add_form_description">Description</string>
    <string name="listings_add_form_price">Price</string>
    <string name="listings_add_form_category">Choose a category</string>
    <string name="listings_add_form_send">Create</string>
    <string name="listings_add_form_save_draft">Save draft</string>
    <string name="listings_add_feedback_draft_saved">Listing saved</string>
    <string name="listings_browsing_title">Browse all listings</string>
    <string name="listing_add_form_validation_neg_price">Please enter a non-negative price</string>
    <string name="listing_add_form_validation_numeric_price">Please enter a valid price</string>
    <string name="listing_details_rate_user_label">Rate user</string>
    <string name="listing_details_contact_seller_label">Contact seller</string>
    <string name="listing_details_meeting_point_button">View Meeting Point</string>
    <string name="listing_details_block_user">Block User</string>
...
